full draft pre-submit

--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -71,7 +71,10 @@
     \input{sections/empirical-evaluation.tex}
     \input{sections/implementation-limitations-and-discussion.tex}
 
-    \bibliographystyle{splncs04}
-    \bibliography{icwe19}
+%    \bibliographystyle{splncs04}
+%    \bibliography{icwe19}
+
+\footnotesize
+\input{Fantastic-activists.bbl}
 
 \end{document}
