--- a/sections/contexts-and-user-metrics.tex
+++ b/sections/contexts-and-user-metrics.tex
@@ -80,6 +80,6 @@ We implement one \textbf{Context-independent topological metric} and one \textbf
 \end{align}
 where $N$ is the number of nodes in the network induced by $C$.
 
-Note that the metrics we have selected are a superset of those indicated in recent studies on online activism, namely \cite{Lotan2011} and \cite{Poell2014}, and thus support our empirical evaluation, described in Sec.~\ref{sec:evaluation}.
+Note that the metrics we have selected are a superset of those indicated in recent studies on online activism, namely \cite{IJoC1246} and \cite{Poell2014}, and thus support our empirical evaluation, described in Sec.~\ref{sec:evaluation}.
 
 % \anote{Summary of user features if space allows}
