--- a/sections/implementation-limitations-and-discussion.tex
+++ b/sections/implementation-limitations-and-discussion.tex
@@ -1,6 +1,7 @@
 \section{Conclusions}
+\vspace{-10pt}
 
 Motivated by the need to find an operational definition of ``online activists'' that is grounded in well-established network and user-activity metrics, we have described a pipeline for systematically harvesting Twitter users based on their engagement with online socially-minded events, or campaigns, which we have called \textit{contexts}.
-Running the pipeline on an initial set of contexts yields a database of user profile along with a number of metrics, which can then be analysed to experiment with user-defined score functions and user ranking criteria. The structure and the components of the pipeline are designed to pre-select promising candidate profiles. 
+Running the pipeline on an initial set of contexts yields a database of user profiles along with a number of metrics, which can then be analysed to experiment with user-defined score functions and user ranking criteria. The structure and the components of the pipeline are designed to pre-select promising candidate profiles. 
 We have provided an empirical evaluation of the pipeline in action on a case study, along with experimental scoring functions to show the viability of the approach. 
 We are currently experimenting with ideas for automating the discovery of new contexts so that the pipeline may continuously add new users to the database, and discover repeat users.
