--- a/tables/ranks-symbolic.tex
+++ b/tables/ranks-symbolic.tex
@@ -1,8 +1,8 @@
 \begin{tabular}{P{0.6cm}|p{2.3cm}|P{1.4cm}|P{1.8cm}|p{2.3cm}|P{1.4cm}|P{1.8cm}|}
 
 \cline{2-7}
-\multicolumn{1}{l|}{} & \multicolumn{3}{c|}{\textbf{Rank 1}} & \multicolumn{3}{c|}{\textbf{Rank 2}} \\ \hline
-\multicolumn{1}{|c|}{\textbf{\#}} & \textbf{User} & \textbf{In-topic} & \textbf{Individual} & \textbf{User} & \textbf{In-topic} & \textbf{Individual} \\ \hline
+\multicolumn{1}{l|}{} & \multicolumn{3}{c|}{\textbf{Ranking 1}} & \multicolumn{3}{c|}{\textbf{Ranking 2}} \\ \hline
+\multicolumn{1}{|c|}{\textbf{\#}} & \textbf{User} & \textbf{On-topic} & \textbf{Individual} & \textbf{User} & \textbf{On-topic} & \textbf{Individual} \\ \hline
 \multicolumn{1}{|c|}{1} & homesnutrition & X &  & johnneustadt & X & X \\ \hline
 \multicolumn{1}{|c|}{2} & ficajones & X & X & jo\_millar27 & X & X \\ \hline
 \multicolumn{1}{|c|}{3} & helenvweaver & X & X & hatchbrenner &  &  \\ \hline
